--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 certifi==2019.9.11
 chardet==3.0.4
+charset-normalizer==2.0.8
 Django==2.2.24
 fylesdk==0.8.1
 idna==2.8
 pytz==2019.2
-requests==2.22.0
+requests==2.26.0
 sqlparse==0.3.0
-urllib3==1.26.5
+urllib3==1.26.7
